tdf#167636 GetOutputString should be using the scanner from LanguageData

and not the shared one, bubble that around more explicitly

Change-Id: Iff6462dafd2baa75253ad9929f9cbf53a178e9b9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/199558
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit 693f44f9238a5cebee074fbe901687ac59a342f7)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/199806
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>